--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,22 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.test.TestActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MovieCollection">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.MovieListActivity"
             android:exported="true"
             android:label="@string/title_activity_movie_list"
-            android:theme="@style/Theme.MovieCollection" >
+            android:theme="@style/Theme.MovieCollection">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
