--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':selectableList')
     def room_version = "2.5.1"
     def lifecycle_version = "2.6.1"
     def fragment_version = "1.6.0"
@@ -60,12 +61,15 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
+    implementation "androidx.recyclerview:recyclerview:1.3.1-rc01"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
     testImplementation "androidx.room:room-testing:$room_version"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -78,6 +82,7 @@ dependencies {
     debugImplementation "androidx.fragment:fragment-ktx:$fragment_version"
     kaptTest 'com.google.dagger:hilt-android-compiler:2.44'
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.44'
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
     // ...with Kotlin.
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.44'
     androidTestImplementation "androidx.test.ext:junit:1.1.5"
