--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,8 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner  'com.aap.ro.movies.MyTestRunner' //'androidx.test.runner.AndroidJUnitRunner'
+        testInstrumentationRunner 'com.aap.ro.movies.MyTestRunner'
+        //'androidx.test.runner.AndroidJUnitRunner'
     }
 
     buildTypes {
@@ -53,6 +54,8 @@ dependencies {
     def fragment_version = "1.6.0"
     def mockk_version = "1.13.5"
     def coroutines_version = "1.7.1"
+    def glide_version = "4.16.0"
+    def hilt_version = "2.44"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -63,11 +66,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
     implementation "androidx.recyclerview:recyclerview:1.3.1-rc01"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
-    implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-compiler:2.44"
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
     testImplementation "androidx.room:room-testing:$room_version"
 
     testImplementation 'junit:junit:4.13.2'
@@ -80,11 +85,11 @@ dependencies {
 
     debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
     debugImplementation "androidx.fragment:fragment-ktx:$fragment_version"
-    kaptTest 'com.google.dagger:hilt-android-compiler:2.44'
-    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.44'
+    kaptTest "com.google.dagger:hilt-android-compiler:$hilt_version"
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
     // ...with Kotlin.
-    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.44'
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
     androidTestImplementation "androidx.test.ext:junit:1.1.5"
     androidTestImplementation "io.mockk:mockk-android:$mockk_version"
     testImplementation "io.mockk:mockk:$mockk_version"
